before using addlisenerEvent

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   </head>
   <body>
     <h1 id="changeMe">Hello world!</h1>
+
+    <button id="btnDont" onclick="giveAnimals()">Don´t Click ME!</button>
+
+    <ul>
+      <li>something 1</li>
+      <li>something 2</li>
+      <li>something 3</li>
+      <li>something 4</li>
+    </ul>
+
+    <ul>
+      <li>something 1</li>
+      <li>something 2</li>
+      <li>something 3</li>
+      <li>something 4</li>
+    </ul>
+
     <script src="myJS.js"></script>
   </body>
 </html>
