used AddEventListener to btn and h2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 id="changeMe">Hello world!</h1>
 
-    <button id="btnDont" onclick="giveAnimals()">Don´t Click ME!</button>
+    <button id="btnDont">Don´t Click ME!</button>
 
     <ul>
       <li>something 1</li>
@@ -24,6 +24,8 @@
       <li>something 3</li>
       <li>something 4</li>
     </ul>
+
+    <h2 id="secret">Secrets under this text</h2>
 
     <script src="myJS.js"></script>
   </body>
