end of workshop

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <button id="btnDont">Don´t Click ME!</button>
 
-    <ul>
+    <ul class="squareMarksList">
       <li>something 1</li>
       <li>something 2</li>
       <li>something 3</li>
       <li>something 4</li>
     </ul>
 
-    <ul>
+    <ul class="squareMarksList">
       <li>something 1</li>
       <li>something 2</li>
       <li>something 3</li>
@@ -29,6 +29,21 @@
     </ul>
 
     <h2 id="secret">Secrets under this text</h2>
+
+    <!-- block comment -->
+    <div id="ticTacBoard">
+      <div></div>
+      <div></div>
+      <div></div>
+
+      <div></div>
+      <div></div>
+      <div></div>
+
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
 
     <script src="myJS.js"></script>
   </body>
