--- a/index.html
+++ b/index.html
@@ -31,19 +31,7 @@
     <h2 id="secret">Secrets under this text</h2>
 
     <!-- block comment -->
-    <div id="ticTacBoard">
-      <div></div>
-      <div></div>
-      <div></div>
-
-      <div></div>
-      <div></div>
-      <div></div>
-
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
+    <div id="ticTacBoard"></div>
 
     <script src="myJS.js"></script>
   </body>
